<resources>
	<string name="app_name">Popular Movies Two</string>
	<string name="no_movies_found">Unfortunately we have been unable to retrieve any movies. Have you checked your internet connection?</string>
	<string name="no_favourites_found">No favourites added yet.</string>

	<string name="youtube_link" translatable="false">http://www.youtube.com/watch?v=</string>
	<string name="favourites_provider" translatable="false">com.android.test.popularmoviestwo</string>

	<string name="action_settings">Settings</string>
	<string name="action_share">Share</string>
	<string name="movieTransitionName" translatable="false">movieTransition</string>

	<string name="pref_sort_key" translatable="false">sort_order</string>
	<string name="pref_sort_label">Sort Order</string>
	<string name="pref_sort_default" translatable="false">popularity.desc</string>
	<string name="pref_favs_key" translatable="false">show_favourites</string>
	<string name="pref_favs_title">Show Favourites</string>
	<string name="pref_favs_label">Show only a list of your favourite movies</string>

	<string name="fragment_detail_title">Title</string>
	<string name="fragment_detail_release_date">Release Date</string>
	<string name="fragment_detail_rating">Rating</string>
	<string name="fragment_detail_image_alt">Movie Poster</string>
	<string name="fragment_detail_rating_text">%s / 10</string>
	<string name="fragment_detail_trailers">Trailers</string>
	<string name="fragment_detail_reviews">Reviews</string>
	<string name="fragment_detail_share">I\'m loving this movie&#160;</string>
	<string name="fragment_detail_vote_count">Vote Count</string>

	<string name="fragment_reviews_title">Review of %s</string>
	<string name="fragment_reviews_author">Author</string>
	<string name="fragment_reviews_review">Review</string>

	<string name="activity_favourites_title">Favourites</string>

	<string name="preferences_key_popularity">popularity.desc</string>
	<string name="preferences_key_top_rated">vote_average.desc</string>

	<item name="trailerpath" type="string">%s/videos</item>
	<item name="reviewspath" type="string">%s/reviews</item>

</resources>
