<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:tools="http://schemas.android.com/tools"
	android:padding="10dp"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="1">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.45"
			android:orientation="vertical">

			<TextView
				style="@style/movieDetailSubHeader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/fragment_detail_title" />

			<TextView
				android:id="@+id/fragment_detail_title"
				style="@style/movieDetailInfo"
				tools:text="Deadpool 2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView
				style="@style/movieDetailSubHeader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:text="@string/fragment_detail_release_date" />

			<TextView
				android:id="@+id/fragment_detail_release_date"
				style="@style/movieDetailInfo"
				tools:text="12/08/2018"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView
				style="@style/movieDetailSubHeader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:text="@string/fragment_detail_rating" />

			<TextView
				android:id="@+id/fragment_detail_vote_average"
				style="@style/movieDetailInfo"
				tools:text="6.7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>

		<View
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.02" />

		<ImageView
			android:id="@+id/fragment_detail_image"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.53"
			android:adjustViewBounds="true"
			android:contentDescription="@string/fragment_detail_image_alt"
			android:transitionName="@string/movieTransitionName" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/fragment_detail_favourites"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="right"
		android:layout_marginTop="10dp"
		android:padding="4dp"
		android:background="@drawable/selector_favourite">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:src="@drawable/selector_star" />

		<TextView
			style="@style/defaultText"
			android:padding="8dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Add to Favourites"
			android:layout_gravity="center_vertical" />
	</LinearLayout>

	<TextView
		android:id="@+id/fragment_detail_synopsis"
		style="@style/defaultText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp" />

	<View
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:layout_marginTop="10dp"
		android:background="@color/colorPrimary" />

	<TextView
		style="@style/movieDetailSubHeader"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/fragment_detail_trailers" />
</LinearLayout>